# QIQuiz

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  db.sqlite  docker-compose.yml
migration/src/: lib.rs  m20250706_214212_create_table_alternative.rs  m20250706_214212_create_table_difficulty.rs  m20250706_214212_create_table_question.rs  m20250706_214212_create_table_quiz.rs  m20250706_214212_create_table_rank.rs  m20250706_221057_create_table_category.rs  m20250808_000440_create_rank_table.rs  m20250808_000448_create_quiz_table.rs  m20250808_000506_create_category_table.rs  m20250808_000513_create_difficult_table.rs  m20250808_000513_create_difficulty_table.rs  m20250808_000525_create_question_table.rs  m20250808_003742_create_alternative_table.rs
src/: app.rs  jwt.rs  main.rs  state.rs
src/configs/: app.rs  cors.rs  database.rs  jwt.rs  mod.rs
src/connections/: database.rs  mod.rs
src/entities/: alternative.rs  category.rs  difficult.rs  difficulty.rs  mod.rs  question.rs  quiz.rs  rank.rs
src/handlers/quiz/: create.rs  delete.rs  mod.rs  submit.rs
src/handlers/user/: login.rs  logoff.rs  mod.rs
src/middlewares/: cors.rs  mod.rs
src/routes/: mod.rs  quiz.rs  user.rs
src/views/: home.rs  mod.rs
src/views/quiz/: create.rs  init.rs  list.rs  mod.rs  play.rs  rank.rs
src/views/user/: login.rs  mod.rs
templates/: header_off.html  header_on.html  login.html
templates/quiz/: create.html  init.html  list.html  play.html  rank.html
templates/user/: login.html
