[package]
name = "QIQuiz"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "migration"
]

[dependencies]
argon2 = "0.5.3"
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
migration = { path = "./migration" }
reqwest = { version = "0.12.22", features = ["json"] }
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "sync", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
